Change CTA button style properties preventing text-wrap

--- a/src/style.css
+++ b/src/style.css
@@ -271,6 +271,7 @@ nav .sidenav-trigger i {
 .section__main-btn a {
     color: var(--main-txt-col);
     letter-spacing: 2px;
+    white-space: nowrap;
     /* font-family: 'Amatic SC', cursive; */
     /* font-weight: bold; */
     font-size: 25px;
